Compiler: Scratching Flex/Bison for ANTLR 4.7.1
Flex and Bison were becoming a pain to integrate with C++ and C++11. The
lack of documentation was also unhelpful, compounded by the ugly code.
Classmates suggested ANTLR which has plugins for all IDEs and has much
more robust code. It supports C++14 and creates a parse tree for you. I
was able to get this demo working in about an hour. Will build off of
this demo.

--- a/compiler/.gitignore
+++ b/compiler/.gitignore
@@ -1,13 +1,10 @@
 # Ignore these files.
-*.exe
-*.output
-*.txt
-*.zip
-*.pdf
-*.dot
-*.o
-bisonGeneratedParser.cpp
-bisonGeneratedParser.hpp
-flexGeneratedScanner.cpp
+VS15W64/
+dist/
+jar/
+demo/generated/
+runtime/src/
 
-
+*.filters
+*.vcxproj
+*.sln
