Compiler: Implemented C- grammar BNF in G4 ANTLR files.
This works! Cmake changes here also

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -2,8 +2,10 @@
 cmake_minimum_required (VERSION 2.8)
 # 2.8 needed because of ExternalProject
 
-# KMW: Specify the location of the ANTLR jar file.
+# Specify the location of the ANTLR jar file.
 set(ANTLR_JAR_LOCATION ${CMAKE_SOURCE_DIR}/jar/antlr-4.7.1-complete.jar CACHE FILE_PATH "ANTLR Jar file name and path.")
+# Indicate we want CMake to create new folder in the VS projects.
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 # Detect build type, fallback to release and throw a warning if use didn't specify any
 if(NOT CMAKE_BUILD_TYPE)
