Compiler: Adding simple SymbolTable implementation with Listener
Added a listener so we can perform actions on specific rules or all of
the rules. One of these actions include adding certain tokens to the
Symbol Table. Implemented a basic symbol table class which stores all
ID/NUM tokens.

--- a/compiler/demo/CMakeLists.txt
+++ b/compiler/demo/CMakeLists.txt
@@ -3,7 +3,7 @@ if(NOT UNIX)
   message(WARNING "Unsupported operating system")
 endif()
 
-set(ANTLR4_GRAMMAR_GENERATED_SRC
+set(ANTLR4_GRAMMAR_GENERATED_SRCS
    ${PROJECT_SOURCE_DIR}/demo/generated/TLexer.cpp 
    ${PROJECT_SOURCE_DIR}/demo/generated/TParser.cpp
    ${PROJECT_SOURCE_DIR}/demo/generated/TParserBaseListener.cpp
@@ -12,16 +12,26 @@ set(ANTLR4_GRAMMAR_GENERATED_SRC
    ${PROJECT_SOURCE_DIR}/demo/generated/TParserVisitor.cpp
  )
 
-foreach( src_file ${ANTLR4_GRAMMAR_GENERATED_SRC} )
+set(ANTLR4_GRAMMAR_GENERATED_HDRS
+	${PROJECT_SOURCE_DIR}/demo/generated/TLexer.h 
+	${PROJECT_SOURCE_DIR}/demo/generated/TParser.h
+	${PROJECT_SOURCE_DIR}/demo/generated/TParserBaseListener.h
+	${PROJECT_SOURCE_DIR}/demo/generated/TParserBaseVisitor.h
+	${PROJECT_SOURCE_DIR}/demo/generated/TParserListener.h
+	${PROJECT_SOURCE_DIR}/demo/generated/TParserVisitor.h
+)
+set(ANTLR4_GRAMMAR_GENERATED_CODE ${ANTLR4_GRAMMAR_GENERATED_HDRS} ${ANTLR4_GRAMMAR_GENERATED_SRCS})
+
+foreach( src_file ${ANTLR4_GRAMMAR_GENERATED_SRCS} )
       set_source_files_properties(
           ${src_file}
           PROPERTIES
           GENERATED TRUE
           )
-endforeach( src_file ${ANTLR4_GRAMMAR_GENERATED_SRC} )
+endforeach( src_file ${ANTLR4_GRAMMAR_GENERATED_SRCS} )
 
-add_custom_target(GenerateParser DEPENDS ${ANTLR4_GRAMMAR_GENERATED_SRC})
-add_custom_command(OUTPUT ${ANTLR4_GRAMMAR_GENERATED_SRC}
+add_custom_target(GenerateParser DEPENDS ${ANTLR4_GRAMMAR_GENERATED_SRCS})
+add_custom_command(OUTPUT ${ANTLR4_GRAMMAR_GENERATED_SRCS}
    COMMAND 
    ${CMAKE_COMMAND} -E make_directory ${PROJECT_SOURCE_DIR}/demo/generated/
    COMMAND
@@ -31,18 +41,31 @@ add_custom_command(OUTPUT ${ANTLR4_GRAMMAR_GENERATED_SRC}
 )
 
 include_directories(
-  ${PROJECT_SOURCE_DIR}/runtime/src
-  ${PROJECT_SOURCE_DIR}/runtime/src/misc
-  ${PROJECT_SOURCE_DIR}/runtime/src/atn
-  ${PROJECT_SOURCE_DIR}/runtime/src/dfa
-  ${PROJECT_SOURCE_DIR}/runtime/src/tree
-  ${PROJECT_SOURCE_DIR}/runtime/src/support
-  ${PROJECT_SOURCE_DIR}/demo/generated
+	${PROJECT_SOURCE_DIR}/runtime/src
+	${PROJECT_SOURCE_DIR}/runtime/src/misc
+	${PROJECT_SOURCE_DIR}/runtime/src/atn
+	${PROJECT_SOURCE_DIR}/runtime/src/dfa
+	${PROJECT_SOURCE_DIR}/runtime/src/tree
+	${PROJECT_SOURCE_DIR}/runtime/src/support
+	${PROJECT_SOURCE_DIR}/demo/generated
+	${PROJECT_SOURCE_DIR}/demo
 )
 
-set(ANTLR4_GRAMMAR_SRC 
+set(ANTLR4_GRAMMAR_LOCAL_HDRS 
+	${PROJECT_SOURCE_DIR}/demo/ParseTreeListener.h
+	${PROJECT_SOURCE_DIR}/demo/SymbolTable.h
+)
+set(ANTLR4_GRAMMAR_LOCAL_SRCS 
 	${PROJECT_SOURCE_DIR}/demo/main.cpp
-	${ANTLR4_GRAMMAR_GENERATED_SRC}
+	${PROJECT_SOURCE_DIR}/demo/ParseTreeListener.cpp
+	${PROJECT_SOURCE_DIR}/demo/SymbolTable.cpp
+)
+set(ANTLR4_GRAMMAR_LOCAL_CODE ${ANTLR4_GRAMMAR_LOCAL_HDRS} ${ANTLR4_GRAMMAR_LOCAL_SRCS})
+set(ANTLR4_GRAMMAR_RULE_FILES ${PROJECT_SOURCE_DIR}/grammar/TLexer.g4 ${PROJECT_SOURCE_DIR}/grammar/TParser.g4)
+
+set(ANTLR4_GRAMMAR_ALL_SRCS 
+	${ANTLR4_GRAMMAR_LOCAL_SRCS}
+	${ANTLR4_GRAMMAR_GENERATED_SRCS}
 )
 
 if (NOT CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
@@ -51,22 +74,27 @@ else()
 	set(ADDITIONAL_FLAGS "-MP /wd4251")
 endif ()
 
-foreach( src_file ${ANTLR4_GRAMMAR_SRC} )
+foreach( src_file ${ANTLR4_GRAMMAR_ALL_SRCS} )
 	set_source_files_properties(
 		${src_file}
 		PROPERTIES
 		COMPILE_FLAGS "${COMPILE_FLAGS} ${ADDITIONAL_FLAGS}"
 	)
-endforeach( src_file ${ANTLR4_GRAMMAR_SRC} )
+endforeach( src_file ${ANTLR4_GRAMMAR_ALL_SRCS} )
 
 add_executable(ANTLR4GrammarTest
-	${ANTLR4_GRAMMAR_SRC}
+	${ANTLR4_GRAMMAR_GENERATED_CODE}
+	${ANTLR4_GRAMMAR_LOCAL_CODE}
+	${ANTLR4_GRAMMAR_RULE_FILES}
 )
 #add_precompiled_header(ANTLR4GrammarTest ${PROJECT_SOURCE_DIR}/runtime/src/antlrcpp-Prefix.h)
 
 # Make a Visual Studio folder in this project to house the grammars.
 message("${PROJECT_SOURCE_DIR}/grammar/TLexer.g4")
-source_group("grammar" FILES ${PROJECT_SOURCE_DIR}/demo/main.cpp)
+
+source_group("grammar" FILES ${ANTLR4_GRAMMAR_RULE_FILES})
+source_group("generated" FILES ${ANTLR4_GRAMMAR_GENERATED_CODE})
+source_group("local" FILES ${ANTLR4_GRAMMAR_LOCAL_CODE})
 #source_group("grammar" FILES "${PROJECT_SOURCE_DIR}/grammar/TLexer.g4")
 #source_group("grammar" FILES "${PROJECT_SOURCE_DIR}/grammar/TParser.g4")
 #file(GLOB_RECURSE LEX_PARSER_RULE_FILES 
