Compiler: Renaming some things, moving things around
Organizing this into more of the final directory structure for the
project, cause it was still in the ANTLR4 demo directory structure.

--- a/compiler/.gitignore
+++ b/compiler/.gitignore
@@ -1,10 +1,11 @@
 # Ignore these files.
 VS15W64/
-dist/
-jar/
-demo/generated/
-runtime/src/
+antlr4/jar/
+antlr4/runtime/src/
+compiler/generated/
+
 
 *.filters
 *.vcxproj
 *.sln
+*.bak
