--- a/compiler/compiler/CMakeLists.txt
+++ b/compiler/compiler/CMakeLists.txt
@@ -4,21 +4,21 @@ if(NOT UNIX)
 endif()
 
 set(ANTLR4_GRAMMAR_GENERATED_SRCS
-   ${PROJECT_SOURCE_DIR}/demo/generated/TLexer.cpp 
-   ${PROJECT_SOURCE_DIR}/demo/generated/TParser.cpp
-   ${PROJECT_SOURCE_DIR}/demo/generated/TParserBaseListener.cpp
-   ${PROJECT_SOURCE_DIR}/demo/generated/TParserBaseVisitor.cpp
-   ${PROJECT_SOURCE_DIR}/demo/generated/TParserListener.cpp
-   ${PROJECT_SOURCE_DIR}/demo/generated/TParserVisitor.cpp
+   ${PROJECT_SOURCE_DIR}/compiler/generated/TLexer.cpp 
+   ${PROJECT_SOURCE_DIR}/compiler/generated/TParser.cpp
+   ${PROJECT_SOURCE_DIR}/compiler/generated/TParserBaseListener.cpp
+   ${PROJECT_SOURCE_DIR}/compiler/generated/TParserBaseVisitor.cpp
+   ${PROJECT_SOURCE_DIR}/compiler/generated/TParserListener.cpp
+   ${PROJECT_SOURCE_DIR}/compiler/generated/TParserVisitor.cpp
  )
 
 set(ANTLR4_GRAMMAR_GENERATED_HDRS
-	${PROJECT_SOURCE_DIR}/demo/generated/TLexer.h 
-	${PROJECT_SOURCE_DIR}/demo/generated/TParser.h
-	${PROJECT_SOURCE_DIR}/demo/generated/TParserBaseListener.h
-	${PROJECT_SOURCE_DIR}/demo/generated/TParserBaseVisitor.h
-	${PROJECT_SOURCE_DIR}/demo/generated/TParserListener.h
-	${PROJECT_SOURCE_DIR}/demo/generated/TParserVisitor.h
+	${PROJECT_SOURCE_DIR}/compiler/generated/TLexer.h 
+	${PROJECT_SOURCE_DIR}/compiler/generated/TParser.h
+	${PROJECT_SOURCE_DIR}/compiler/generated/TParserBaseListener.h
+	${PROJECT_SOURCE_DIR}/compiler/generated/TParserBaseVisitor.h
+	${PROJECT_SOURCE_DIR}/compiler/generated/TParserListener.h
+	${PROJECT_SOURCE_DIR}/compiler/generated/TParserVisitor.h
 )
 set(ANTLR4_GRAMMAR_GENERATED_CODE ${ANTLR4_GRAMMAR_GENERATED_HDRS} ${ANTLR4_GRAMMAR_GENERATED_SRCS})
 
@@ -33,36 +33,36 @@ endforeach( src_file ${ANTLR4_GRAMMAR_GENERATED_SRCS} )
 add_custom_target(GenerateParser DEPENDS ${ANTLR4_GRAMMAR_GENERATED_SRCS})
 add_custom_command(OUTPUT ${ANTLR4_GRAMMAR_GENERATED_SRCS}
    COMMAND 
-   ${CMAKE_COMMAND} -E make_directory ${PROJECT_SOURCE_DIR}/demo/generated/
+   ${CMAKE_COMMAND} -E make_directory ${PROJECT_SOURCE_DIR}/compiler/generated/
    COMMAND
-   "${Java_JAVA_EXECUTABLE}" -jar ${ANTLR_JAR_LOCATION} -Werror -Dlanguage=Cpp -listener -visitor -o ${PROJECT_SOURCE_DIR}/demo/generated/ -package antlrcpptest ${PROJECT_SOURCE_DIR}/grammar/TLexer.g4 ${PROJECT_SOURCE_DIR}/grammar/TParser.g4
+   "${Java_JAVA_EXECUTABLE}" -jar ${ANTLR_JAR_LOCATION} -Werror -Dlanguage=Cpp -listener -visitor -o ${PROJECT_SOURCE_DIR}/compiler/generated/ -package AntlrGrammarGenerated ${PROJECT_SOURCE_DIR}/grammar/TLexer.g4 ${PROJECT_SOURCE_DIR}/grammar/TParser.g4
    WORKING_DIRECTORY "${CMAKE_BINARY_DIR}"
    DEPENDS ${PROJECT_SOURCE_DIR}/grammar/TLexer.g4 ${PROJECT_SOURCE_DIR}/grammar/TParser.g4
 )
 
 include_directories(
-	${PROJECT_SOURCE_DIR}/runtime/src
-	${PROJECT_SOURCE_DIR}/runtime/src/misc
-	${PROJECT_SOURCE_DIR}/runtime/src/atn
-	${PROJECT_SOURCE_DIR}/runtime/src/dfa
-	${PROJECT_SOURCE_DIR}/runtime/src/tree
-	${PROJECT_SOURCE_DIR}/runtime/src/support
-	${PROJECT_SOURCE_DIR}/demo/generated
-	${PROJECT_SOURCE_DIR}/demo
+	${PROJECT_SOURCE_DIR}/antlr4/runtime/src
+	${PROJECT_SOURCE_DIR}/antlr4/runtime/src/misc
+	${PROJECT_SOURCE_DIR}/antlr4/runtime/src/atn
+	${PROJECT_SOURCE_DIR}/antlr4/runtime/src/dfa
+	${PROJECT_SOURCE_DIR}/antlr4/runtime/src/tree
+	${PROJECT_SOURCE_DIR}/antlr4/runtime/src/support
+	${PROJECT_SOURCE_DIR}/compiler/generated
+	${PROJECT_SOURCE_DIR}/compiler
 )
 
 set(ANTLR4_GRAMMAR_LOCAL_HDRS 
-	${PROJECT_SOURCE_DIR}/demo/AstNode.h
-	${PROJECT_SOURCE_DIR}/demo/ParseTreeListenerImpl.h
-	${PROJECT_SOURCE_DIR}/demo/ParseTreeVisitorImpl.h
-	${PROJECT_SOURCE_DIR}/demo/SymbolTable.h
+	${PROJECT_SOURCE_DIR}/compiler/AstNode.h
+	${PROJECT_SOURCE_DIR}/compiler/ParseTreeListenerImpl.h
+	${PROJECT_SOURCE_DIR}/compiler/ParseTreeVisitorImpl.h
+	${PROJECT_SOURCE_DIR}/compiler/SymbolTable.h
 )
 set(ANTLR4_GRAMMAR_LOCAL_SRCS 
-	${PROJECT_SOURCE_DIR}/demo/main.cpp
-	${PROJECT_SOURCE_DIR}/demo/AstNode.cpp
-	${PROJECT_SOURCE_DIR}/demo/ParseTreeListenerImpl.cpp
-	${PROJECT_SOURCE_DIR}/demo/ParseTreeVisitorImpl.cpp
-	${PROJECT_SOURCE_DIR}/demo/SymbolTable.cpp
+	${PROJECT_SOURCE_DIR}/compiler/main.cpp
+	${PROJECT_SOURCE_DIR}/compiler/AstNode.cpp
+	${PROJECT_SOURCE_DIR}/compiler/ParseTreeListenerImpl.cpp
+	${PROJECT_SOURCE_DIR}/compiler/ParseTreeVisitorImpl.cpp
+	${PROJECT_SOURCE_DIR}/compiler/SymbolTable.cpp
 )
 set(ANTLR4_GRAMMAR_LOCAL_CODE ${ANTLR4_GRAMMAR_LOCAL_HDRS} ${ANTLR4_GRAMMAR_LOCAL_SRCS})
 set(ANTLR4_GRAMMAR_RULE_FILES ${PROJECT_SOURCE_DIR}/grammar/TLexer.g4 ${PROJECT_SOURCE_DIR}/grammar/TParser.g4)
@@ -91,11 +91,9 @@ add_executable(ANTLR4GrammarTest
 	${ANTLR4_GRAMMAR_LOCAL_CODE}
 	${ANTLR4_GRAMMAR_RULE_FILES}
 )
-#add_precompiled_header(ANTLR4GrammarTest ${PROJECT_SOURCE_DIR}/runtime/src/antlrcpp-Prefix.h)
+#add_precompiled_header(ANTLR4GrammarTest ${PROJECT_SOURCE_DIR}/antlr4/runtime/src/antlrcpp-Prefix.h)
 
 # Make a Visual Studio folder in this project to house the grammars.
-message("${PROJECT_SOURCE_DIR}/grammar/TLexer.g4")
-
 source_group("grammar" FILES ${ANTLR4_GRAMMAR_RULE_FILES})
 source_group("generated" FILES ${ANTLR4_GRAMMAR_GENERATED_CODE})
 source_group("local" FILES ${ANTLR4_GRAMMAR_LOCAL_CODE})
@@ -114,7 +112,7 @@ source_group("local" FILES ${ANTLR4_GRAMMAR_LOCAL_CODE})
 
 # Add an MSVC compile option.
 if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
-	target_compile_options(ANTLR4GrammarTest PRIVATE "/MT$<$<CONFIG:Debug>:d>")
+	target_compile_options(ANTLR4GrammarTest PRIVATE "/MD$<$<CONFIG:Debug>:d>")
 endif()
 
 add_dependencies(ANTLR4GrammarTest GenerateParser)
