--- a/compiler/compiler/CMakeLists.txt
+++ b/compiler/compiler/CMakeLists.txt
@@ -53,6 +53,7 @@ include_directories(
 
 set(ANTLR4_GRAMMAR_LOCAL_HDRS 
 	${PROJECT_SOURCE_DIR}/compiler/AstNode.h
+	${PROJECT_SOURCE_DIR}/compiler/ErrorHandler.h
 	${PROJECT_SOURCE_DIR}/compiler/ParseTreeListenerImpl.h
 	${PROJECT_SOURCE_DIR}/compiler/ParseTreeVisitorImpl.h
 	${PROJECT_SOURCE_DIR}/compiler/SymbolTable.h
@@ -60,6 +61,7 @@ set(ANTLR4_GRAMMAR_LOCAL_HDRS
 set(ANTLR4_GRAMMAR_LOCAL_SRCS 
 	${PROJECT_SOURCE_DIR}/compiler/main.cpp
 	${PROJECT_SOURCE_DIR}/compiler/AstNode.cpp
+	${PROJECT_SOURCE_DIR}/compiler/ErrorHandler.cpp
 	${PROJECT_SOURCE_DIR}/compiler/ParseTreeListenerImpl.cpp
 	${PROJECT_SOURCE_DIR}/compiler/ParseTreeVisitorImpl.cpp
 	${PROJECT_SOURCE_DIR}/compiler/SymbolTable.cpp
